fix: 修正若干配置错误

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ server:
 spring:
   profiles:
     active: dev
+  jackson:
+    date-format: yyyy-MM-dd HH:mm
+    time-zone: GMT+8
 
 #mybatis
 mybatis-plus:
