--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <commons.codec.version>1.10</commons.codec.version>
         <commons.configuration.version>1.10</commons.configuration.version>
         <gson.version>2.8.5</gson.version>
-        <fastjson.version>1.2.72</fastjson.version>
+        <fastjson.version>1.2.75</fastjson.version>
         <kaptcha.version>0.0.9</kaptcha.version>
         <druid.version>1.1.13</druid.version>
     </properties>
@@ -35,8 +35,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
